--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "howler": "^2.2.3",
     "pinia": "^2.0.28",
     "vee-validate": "^4.7.3",
+    "vite-plugin-pwa": "^0.14.1",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
